# jaundice-rate

./: .flake8  .gitignore  .isort.cfg  LICENSE  README.md  pyproject.toml
jaundice_rate/: __init__.py  exceptions.py  main.py  process_articles.py  server.py  settings.py  text_tools.py
jaundice_rate/adapters/: __init__.py  exceptions.py  html_tools.py  inosmi_ru.py
tests/: conftest.py  test_process_article.py  test_text_tools.py
tests/test_adapters/: test_inosmi_ru.py
