[tool.poetry]
name = "jaundice-rate"
version = "0.1.0"
description = ""
authors = ["savilard <vitaliyantonoff@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "jaundice_rate"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
cchardet = "^2.1.7"
aiodns = "^3.0.0"
beautifulsoup4 = "^4.12.0"
httpx = "^0.23.3"
pymorphy2 = "^0.9.1"
pymorphy2-dicts = "^2.4.393442.3710985"
aiofiles = "^23.1.0"
anyio = "^3.6.2"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
wemake-python-styleguide = "^0.17.0"
black = "^23.1.0"
pyright = "^1.1.300"
pytest-asyncio = "^0.21.0"
aiohttp-devtools = "^1.0.post0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
